adding new exercise get earliest

--- a/add.ipynb
+++ b/add.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "add\n",
+    "Assigned from Mixed Level on 10/19/2019\n",
     "Hey! ✨\n",
     "\n",
     "I'd like you to write a function that accepts two lists-of-lists of numbers and returns one list-of-lists with each of the corresponding numbers in the two given lists-of-lists added together.\n",
@@ -28,7 +30,10 @@
     "\n",
     "For the first bonus, modify your add function to accept and \"add\" any number of lists-of-lists. ✔️\n",
     "\n",
-    ">>> add([[1, 9], [7, 3]], [[5, -4], [3, 3]], [[2, 3], [-3, 1]])\n",
+    ">>> matrix1 = [[1, 9], [7, 3]]\n",
+    ">>> matrix2 = [[5, -4], [3, 3]]\n",
+    ">>> matrix3 = [[2, 3], [-3, 1]]\n",
+    ">>> add(matrix1, matrix2, matrix3)\n",
     "[[8, 8], [7, 7]]\n",
     "Bonus 2\n",
     "\n",
@@ -39,7 +44,23 @@
     "  File \"<stdin>\", line 1, in <module>\n",
     "  File \"add.py\", line 10, in add\n",
     "    raise ValueError(\"Given matrices are not the same size.\")\n",
-    "ValueError: Given matrices are not the same size."
+    "ValueError: Given matrices are not the same size.\n",
+    "Hints\n",
+    "\n",
+    "Hints for when you get stuck (hover over links to see what they're about):\n",
+    "\n",
+    "Iterating lists with indexes (and without)\n",
+    "http://treyhunner.com/2016/04/how-to-loop-with-indexes-in-python/\n",
+    "Multiple assignment might come in handy\n",
+    "https://treyhunner.com/2018/03/tuple-unpacking-improves-python-code-readability/\n",
+    "A special syntax for creating new lists from old lists\n",
+    "https://treyhunner.com/2015/12/python-list-comprehensions-now-in-color/\n",
+    "Accepting any number of arguments to a function\n",
+    "https://treyhunner.com/2018/10/asterisks-in-python-what-they-are-and-how-to-use-them/#Asterisks_for_packing_arguments_given_to_function\n",
+    "More discussion on accepting any number of arguments\n",
+    "https://stackoverflow.com/questions/36901/what-does-double-star-asterisk-and-star-asterisk-do-for-parameters/36908#36908\n",
+    "Raising an exception in Python\n",
+    "https://stackoverflow.com/questions/2052390/manually-raising-throwing-an-exception-in-python\n"
    ]
   },
   {
@@ -222,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
